1.2

Usage is now aligned and alphabetically sorted.

1.1

Better internationalization
Password support
Type converters
