@@ -1,6 +1,7 @@
 1.2
 
-Usage is now aligned and alphabetically sorted.
+Usage is now aligned and alphabetically sorted
+Added the hidden attribute
 
 1.1
 
